change(commented) in onepage.phtml

--- a/IWD/Opc/view/frontend/templates/onepage.phtml
+++ b/IWD/Opc/view/frontend/templates/onepage.phtml
@@ -12,8 +12,8 @@ $checkoutSession = \Magento\Framework\App\ObjectManager::getInstance()
     ->get(\Magento\Checkout\Model\Session\Proxy::class);
 $isVirtual = $checkoutSession->getQuote()->isVirtual() ?>
 <div class="iwd_opc_clear"></div>
-<div id="checkout-loader" data-role="checkout-loader" class="loading-mask" data-mage-init='{"checkoutLoader": {}}'>
-    <div class="loader"></div>
+<!-- <div id="checkout-loader" data-role="checkout-loader" class="loading-mask" data-mage-init='{"checkoutLoader": {}}'>
+    <div class="loader"></div> -->
 </div>
 
 <div id="iwd_opc_iframe_container" class="iwd_main_wrapper iwd_opc_wrapper " style="display: none;">
